kubernetes/argo-cd/projects/aws/production-hm/odoo/environments/production/kubernetes-manifests/hm-odoo-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-odoo-ingress
  namespace: production-hm-odoo
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: odoo.hongbomiao.com
  labels:
    app.kubernetes.io/name: odoo
    app.kubernetes.io/part-of: production-hm-odoo
spec:
  rules:
    - host: odoo.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hm-odoo
                port:
                  number: 80
  tls:
    - hosts:
        - odoo.hongbomiao.com
      secretName: hm-odoo-certificate
